[tool.poetry]
name = "comp586-slang-final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
pandas = "^2.2.3"
huggingface-hub = "^0.30.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
